Fixed whitespace at bottom of page bug using normalize.css and removing cssreset.css

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -4,10 +4,14 @@ html {
 body {
   font-family: 'Open Sans';
   color: white;
-  min-height: 100%; }
+  min-height: 100%;
+  margin: 0;
+  padding: 0; }
 
 body.landing {
-  background: #5b5579; }
+  background: #5b5579;
+  margin: 0;
+  padding: 0; }
 
 .hero-content {
   background: #2f1d57;
